# AIS2

./: .gitignore  README.md  UV_USAGE.md  config_example.yaml  main.py  pyproject.toml
src/mot_system/: __init__.py
src/mot_system/detection/: __init__.py  base_detector.py  rt_detr_detector.py
src/mot_system/models/: __init__.py  model_manager.py
src/mot_system/tracking/: __init__.py  base_tracker.py  simple_tracker.py
src/mot_system/utils/: __init__.py  config.py  video_processor.py  visualization.py
